<resources>
    <string name="app_name">OnlineStore</string>
    <string name="action_shoppingcart">Cart</string>
    <string name="action_settings">Settings</string>
    <string name="test_fruit_name">Pineapple</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--create product-->
    <string name="title_activity_create_product">CreateProductActivity</string>
    <string name="product_title_label">Title</string>
    <string name="product_title_hint">Enter a title for the product</string>
    <string name="product_price_label">Price</string>
    <string name="product_price_hint">Enter the price for the product</string>

    <string name="product_description_label">Description</string>
    <string name="product_description_hint">Enter the price for the product</string>

    <string name="action_create">Create</string>
    <string name="title_activity_maps">Map</string>


    <!--Navigation menu-->
    <string name="nav_home">Dashboard</string>
    <string name="nav_search">Search</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_share">Share</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>

    <!--Permission -->
    <string name="gps_network_not_enabled">Location Service is not enabled</string>
    <string name="open_location_settings">Would you like to turn it on?</string>
    <string name="open_location_alert_dismiss">Dismiss</string>


</resources>
