<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_event_note_white_24dp"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_white_24dp"
            android:title="@string/nav_chat" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_white_24dp"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_white_24dp"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
